# axlib

./: .gitignore  AUTHORS.md  LICENSE  Makefile  README.md  pyproject.toml
src/axlib/: __init__.py  __main__.py  calc.py
src/axlib/tf/: __init__.py  __main__.py  incfile.py  rmcomment.py  rmdouble.py  rmline.py  rmtriple.py  rmwhite.py  rmwhite2.py  text.md  text.test  text.toml  text.white  text.yaml  varsub.py
tests/: test_calc.py  test_calc_fixtures.py
