[project]
name = "axlib"
version = "0.1.1"
description = "Axlib is a collection of tools and Python library for NetOps activities"
readme = "README.md"
requires-python = ">=3.14"
license = "Apache-2.0"
license-files = ["LICENSE", "AUTHORS.md"]
authors = [
    { name = "Robert Patrick", email = "rob-axlib@rpatrick.com" },
]
keywords = ["network", "automation", "tools", "juniper", "cisco", "aruba", "linux", "cli", "ssh", "snmp"]
classifiers = [
	"Programming Language :: Python :: 3",
    "Development Status :: 5 - Production/Stable",
]
dependencies = []

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[project.urls]
Homepage = "https://github.com/robert-patrick-texas/axlib"
Repository = "https://github.com/robert-patrick-texas/axlib"
Documentation = "https://github.com/robert-patrick-texas/axlib"
Issues = "https://github.com/robert-patrick-texas/axlib/issues"


[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.pytest.ini_options]
addopts = ["--maxfail=1", "--cov=axlib", "--cov-fail-under=50"]

[tool.ty.terminal]
error-on-warning = true

[tool.ty.environment]
python-version = "3.14"

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py314"
cache-dir = "/dev/shm/.cache/ruff"

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[tool.ruff.lint]
#select = ["ALL"]
#ignore = ["D", "COM812", "ISC001"]
extend-select = [
    "F",        # Pyflakes rules
    "W",        # PyCodeStyle warnings
    "E",        # PyCodeStyle errors
    "I",        # Sort imports properly
    "UP",       # Warn if certain things can changed due to newer Python versions
    "C4",       # Catch incorrect use of comprehensions, dict, list, etc
    "FA",       # Enforce from __future__ import annotations
    "ISC",      # Good use of string concatenation
    "ICN",      # Use common import conventions
    "RET",      # Good return practices
    "SIM",      # Common simplification rules
    "TID",      # Some good import practices
    "TC",       # Enforce importing certain types in a TYPE_CHECKING block
    "PTH",      # Use pathlib instead of os.path
    "TD",       # Be diligent with TODO comments
    "NPY",      # Some numpy-specific things
]
